force-app/main/default/objects/Log__c/fields/Last_Hour__c.field-meta.xml
<CustomField>
    <fullName>Last_Hour__c</fullName>
    <description>Is CreatedDate withing Last Hour?</description>
    <formula>NOW() - CreatedDate &lt;= (1/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Hour</label>
    <type>Checkbox</type>
</CustomField>