force-app/main/default/objects/Log__c/listViews/Last_Hour.listView-meta.xml
<ListView>
    <fullName>Last_Hour</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Hour__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Last Hour</label>
</ListView>