force-app/main/default/objects/Log__c/listViews/Recent_Logs.listView-meta.xml
<ListView>
    <fullName>Recent_Logs</fullName>
    <columns>NAME</columns>
    <columns>UUID__c</columns>
    <columns>Running_User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recent Logs</label>
</ListView>